# lab2-TIDI25

./: .gitignore  CMakeLists.txt  README.md  build.py  controller.cc  controller.h  game.cc  game.h  interfaces.cc  interfaces.h  lab2.drawio  main.cc  main.py
.github/workflows/: drawio-to-svg.yml
diagrams/: architecture.drawio  lab2.drawio
src/: GameObj.h  bindings.cc  controller.cc  controller.h  game.cc  game.h  interfaces.h  main.cc  vec.h
